--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,11 +34,8 @@ header nav {
     font-size: 20px;
 }
 
-header nav ul {
+header nav a {
     list-style-type: none;
-}
-
-header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -50,6 +47,17 @@ a {
 
 p {
     font-size: 16px;
+}
+
+footer {
+    padding: 30px;
+    clear: both;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    text-align: center;
+}
+
+footer h2 {
+    font-size: 20px;
 }
 
 /* Class Selector */
@@ -189,15 +197,4 @@ p {
 .social-media-marketing h2 {
     margin-bottom: 20px;
     font-size: 36px;
-}
-
-footer {
-    padding: 30px;
-    clear: both;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    text-align: center;
-}
-
-footer h2 {
-    font-size: 20px;
 }
