--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,6 +85,7 @@ footer h2 {
     margin-left: 20px;
 }
 
+/* Change the aside for content to one class to shorten the code */
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -96,23 +97,27 @@ footer h2 {
     background-color: #2589bd;
 }
 
+/* Change the aside section tag for content to one class to shorten the code */
 .benefit {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
+/* Change the class for benefit to one class to shorten the code for h3 */
 .benefit h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
+/* Change the class for benefit to one class to shorten the code for image */
 .benefit img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
-.search-engine-optimization {
+/* Change the class for content to one class to shorten the code */
+.content-section {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -121,47 +126,13 @@ footer h2 {
     color: #ffffff;
 }
 
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.search-engine-optimization img {
+/* Change the class for content to one class to shorten the code for image */
+.content-section img {
     max-height: 200px;
 }
 
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-.search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
+/* Change the class for content to one class to shorten the code for h2 */
+.content-section h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
